# go1_repo

./: .gitignore  .gitmodules  README.md
catkin_ws/src/Point-LIO/: CMakeLists.txt  package.xml
catkin_ws/src/Point-LIO/config/: bpearl.yaml
catkin_ws/src/Point-LIO/launch/: mapping_bpearl.launch
catkin_ws/src/Point-LIO/rviz_cfg/: lio_show_mine.rviz
catkin_ws/src/go1_ros_interface/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/go1_ros_interface/launch/: robot.launch  robotTF.launch
catkin_ws/src/go1_ros_interface/scripts/: broadcast_transforms.py
catkin_ws/src/go1_ros_interface/src/: publish_robot_state.cpp
catkin_ws/src/gps_waypoint_nav/: .mapviz_config  CMakeLists.txt  package.xml
catkin_ws/src/ig_lio/: CMakeLists.txt
catkin_ws/src/metrics_extractor/: CMakeLists.txt  package.xml
catkin_ws/src/navigation_final_semfire_pilot/: CMakeLists.txt
docker/: Text file  app_launcher_melodic.sh  app_launcher_noetic.sh  docker-compose.yml  melodic-launch.sh  melodic.Dockerfile  noetic-launch.sh  noetic.Dockerfile  tilemap.Dockerfile
shared_folder/: .bash_history  .p10k.zsh  .zsh_history  .zshrc  app_launcher_melodic.sh  app_launcher_noetic.sh  change_local_costmap_file.sh  change_local_static_map.sh  collect_gps.sh  elevation.sh  goal_status.sh  mebt.sh  melodic-launch.sh  noetic-launch.sh  record_bag.sh  startup.sh  trav-melodic.sh  trav.sh
shared_folder/bags/: 2025-07-01-21-33-33.bag  2025-07-01-21-50-48.bag  2025-07-01-21-54-43.bag  2025-07-01-21-55-12.bag  2025-07-01-22-06-02.bag  2025-07-01-22-07-58.bag  2025-07-01-22-09-23.bag  2025-07-01-22-13-03.bag
(+200 files in other folders)
